﻿
BrawlCrate - v0.26 Hotfix 2
Copyright © 2018 - 2019 soopercool101, MarioDox, Syvkal
BrawlBox  © 2009 - 2019 Bryan Moulton, BlackJax96, libertyernie & Sammi Husky

https://github.com/soopercool101/BrawlCrate
https://discord.gg/s7c8763

This program is provided as-is without any warranty, implied or otherwise.
By using this program, the end user agrees to take full responsibility
regarding its proper and lawful use. The authors/hosts/distributors cannot be 
held responsible for any damage resulting in the use of this program, nor can 
they be held accountable for the manner in which it is used.

 ===============================================
|************ BrawlCrate Change Log ************|
 ===============================================
 
 - BrawlCrate v0.26 Hotfix 2 - (7/8/2019)
 . Fix issue in which Shaders could be initialized with null names
 . Fix crashes caused by VIS0 syncing
 . Fix crashes when moving vertices
 . Fix issue where an exported DAE could not be reimported
 . Fix bug in which vertex edits could not be saved
 . Fix bug in which Final Smash flags for Fighter Configs switched the None/Single flag
 . Fix bug in which generating metal materials for a model that doesn't currently have them would result in the metal texture being set to "<null>"
 . Fix bug in which exporting a model with "<null>" textures would crash the program

 - BrawlCrate v0.26 Hotfix 1 - (5/16/2019)
 . Fix issue where shaders could not be properly selected
 . Property grid no longer expands all items by default
 
 - BrawlCrate v0.26 - (5/16/2019)
 . Metal material generation should completely match Brawl
 . Metal Texture is now saved as a property and is used when generating metals (including using AutoMetal)
 . RTSC Entries now show slot # in their name
 . Shaders now parse with a space in their name
 . COLLADA dae files now serialize as v1.4.1 rather than v1.5.0
 . ".masq" is now a valid filetype
 . Property Grid now expands all submenus by default