@@ -1,5 +1,5 @@
 ﻿
-BrawlCrate - v0.26 Hotfix 2
+BrawlCrate - v0.26 Hotfix 3
 Copyright © 2018 - 2019 soopercool101, MarioDox, Syvkal
 BrawlBox  © 2009 - 2019 Bryan Moulton, BlackJax96, libertyernie & Sammi Husky
 
@@ -15,6 +15,12 @@ they be held accountable for the manner in which it is used.
  ===============================================
 |************ BrawlCrate Change Log ************|
  ===============================================
+ 
+ - BrawlCrate v0.26 Hotfix 3 - (7/25/2019)
+ . Improve interpolation function to match v0.71 in all aspects
+ . Fix anim importer to properly parse weighting
+ . Fix anim exporter to properly export tangents
+ . Fix issue where module annotation buttons were missing
  
  - BrawlCrate v0.26 Hotfix 2 - (7/8/2019)
  . Fix issue in which Shaders could be initialized with null names
